--- a/clone/src/index.scss
+++ b/clone/src/index.scss
@@ -20,7 +20,7 @@ p {
 body {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center !important;
 }
 button {
   background: none;
