--- a/clone/src/section.scss
+++ b/clone/src/section.scss
@@ -4,6 +4,7 @@
   width: 1280px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   .frame{
     width: 100%;
     border-radius: 8px;
@@ -448,6 +449,7 @@
         height: 172px;
         padding: 18px;
         display: flex;
+        justify-content: space-between;
         .ad5-left {
           width: 80px;
           display: flex;
@@ -469,9 +471,75 @@
           }
         }
         .ad5-right {
-          width: 136px; height: 100%;
+          width: 294px ; height: 100%;
+          // background-color: gray;
+          position: relative;
+          .mySwiper {
+            width: 100%; height: 100%;
+            .slide {
+              box-sizing: border-box;
+              width: 100%; height: 100%;
+              // background-color: #adadad;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+              .img-box {
+                width: 90px; height: 90px;
+                border-radius: 8px !important;
+                overflow: hidden !important;
+                img {
+                  width: 100%; height: 100%;                  
+                }
+              }
+              p {
+                font-size: 14px;
+              }
+            }            
+          }
+          .swiper-button-prev, .swiper-button-next {
+            width: 32px; height: 32px;
+            border-radius: 50%;
+            box-sizing: border-box;
+            border: 1px solid #80808030;
+            background-color: white;
+            display: flex;
+            align-items: center; justify-content: center;
+            &::after {
+              font-size: 16px !important;
+              font-weight: 600;
+            }            
+          }
+          .swiper-button-prev {
+            left: -10px;
+            top: 50px;
+          }
+          .swiper-button-next {
+            right: -10px;
+            top: 50px;
+          }
+        }
+      }
+      .weather {
+        padding: 0 18px;
+        display: flex;
+        flex-direction: column;
+        .weather-title {
+          width: 100%;
+          padding: 13px 0;
+          font-size: 17px;
+        }
+        .weather-in {
+          display: flex;
+          width: 100%; height: 184px;
+          justify-content: space-between;
+          gap: 10px;
+          .weather-in-1 ,.weather-in-2 {
+            width: 100%; height: 100%;
+            background-color: gray;
+          }
         }
       }
     }
   }
+  
 }
