--- a/clone/src/section.scss
+++ b/clone/src/section.scss
@@ -4,7 +4,7 @@
   width: 1280px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   .frame{
     width: 100%;
     border-radius: 8px;
@@ -384,6 +384,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    justify-content: flex-start;
     .login {
       display: flex;
       flex-direction: column;
@@ -541,5 +542,5 @@
       }
     }
   }
-  
+
 }
