--- a/clone/src/Header.scss
+++ b/clone/src/Header.scss
@@ -56,6 +56,11 @@
     .search-logo {
       padding-left: 20px;
       padding-right: 10px;
+      cursor: pointer;
+      .av{
+        width: 24px;height: 24px;
+        background-color: gray;
+      }
       img {
         width: 24px; height: 24px;
         background-color: gray;
@@ -112,6 +117,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
       .bt-box {
         width: 40px; height: 40px;
         border-radius: 14px ;
