--- a/clone/src/footer.scss
+++ b/clone/src/footer.scss
@@ -2,7 +2,7 @@
 
 .footer{
   margin-top: 60px;
-  width: 100%;
+  width: 100%; min-width: 1280px;
   position: absolute;
   left: 0;
   display: flex;
@@ -57,6 +57,92 @@
               transform: scale(1.1);
             }            
           }
+        }
+      }
+      .fo-m1 {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 21px 0;
+        border-top: 1px solid #80808030;
+        border-bottom: 1px solid #80808030;
+        button {
+          font-weight: 600;
+          font-size: 14px;
+        }
+      }
+      .fo-m2 {
+        padding: 20px 0;
+        display: flex;
+        justify-content: space-between;
+        .m1{
+          display: flex;
+          gap: 16px;
+          & * {
+            font-size: 14px;
+          }
+          .m1-1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;            
+            font-weight: 600;
+          }
+          .m1-2 {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;   
+            div {
+              display: flex;
+              gap: 4px;
+              p {
+                color: #80808030;
+              }
+            }         
+          }          
+        }
+        .m2 {
+          display: flex;
+          .m2-in {
+            display: flex;
+            gap: 10px;
+            .m2-in-in {
+              display: flex; height: 100%;
+              box-sizing: border-box;
+              flex-direction: column;
+              justify-content: space-between;
+              align-items: flex-start;
+              padding: 4px 0;
+              p {
+                font-size: 14px;
+                &.semi {
+                  font-weight: 600;
+                }
+              }
+            }
+            .img-box {
+              width: 48px; height: 48px;
+              background-color: gray;
+              img {
+                width: 100%; height: 100%;
+              }
+            }
+          }
+        }
+      }
+      .fo-b {
+        display: flex;
+        padding-top: 20px;
+        border-top: 1px solid #80808030;
+        justify-content: center;
+        gap: 4px;
+        & * {
+          font-size: 14px;
+        }
+        .semi {
+          font-weight: 600;
+        }
+        p {
+          color: #80808030;
         }
       }
   }
