쇼핑의 줄바꿈 되던거 수정

--- a/clone/src/section.scss
+++ b/clone/src/section.scss
@@ -260,6 +260,7 @@
               }
               .text {
                 font-size: 13px;
+                text-wrap: nowrap;
               }
             }
           }
